--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.2.1",
+    "@devexpress/dx-react-scheduler": "^2.2.1",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.2.1",
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.7",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "universal-cookie": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
