--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-google-login": "^5.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-window": "^1.8.5",
     "universal-cookie": "^4.0.2"
   },
   "scripts": {
