--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "react": "^16.12.0",
+    "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
