--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "material-table": "^1.54.1",
     "react": "^16.12.0",
     "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
