--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@devexpress/dx-react-core": "^2.3.0",
     "@devexpress/dx-react-scheduler": "^2.3.0",
     "@devexpress/dx-react-scheduler-material-ui": "^2.3.0",
+    "@ishawnwang/withunmounted": "^1.0.1",
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
