--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "node server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "keroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "author": "Robin Gan, Yuhan Chen",
   "license": "ISC",
