--- a/.htaccess
+++ b/.htaccess
@@ -1,17 +1,12 @@
 <IfModule mod_rewrite.c>
+Options -MultiViews
 RewriteEngine On
 RewriteBase /
 RewriteRule ^index\.html$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.html [L]
+RewriteRule . /index.html [QSA,L]
 </IfModule>
 <FilesMatch "\.(jpg|jpeg)$">
 FileETag MTime Size
 </FilesMatch>
-# DO NOT REMOVE THIS LINE AND THE LINES BELOW SSL_REDIRECT:seeyourschedule.com
-RewriteEngine on
-RewriteCond %{HTTPS} off
-RewriteCond %{HTTP_HOST} ^seeyourschedule.com$
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-# DO NOT REMOVE THIS LINE AND THE LINES ABOVE SSL_REDIRECT:seeyourschedule.com
