--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,11 @@
 <IfModule mod_rewrite.c>
-Options -MultiViews
-RewriteEngine On
-RewriteBase /
-RewriteRule ^index\.html$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.html [QSA,L]
+
+  RewriteEngine On
+  RewriteBase /
+  RewriteRule ^index\.html$ - [L]
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME} !-l
+  RewriteRule . /index.html [L]
+
 </IfModule>
-<FilesMatch "\.(jpg|jpeg)$">
-FileETag MTime Size
-</FilesMatch>
